# geri-smx-decoder

./: .clang-format  .codespellrc  BUILDING.md  CMakeLists.txt  CMakePresets.json  HACKING.md  README.md
.github/workflows/: c++11.yml  c++14.yml  c++17.yml  c++20.yml  c++23.yml  c++26.yml  ci.yml  systems.yml
cmake/: coverage.cmake  docs.cmake  install-config.cmake  install-rules.cmake  variables.cmake
docs/: Doxyfile.in  footer.tex  header.tex
example/: CMakeLists.txt  file_read_example.cpp  file_read_example_cpp11.cpp
include/geri-smx-decoder/: geri-smx-decoder.hpp
test/: CMakeLists.txt
test/source/: geri-smx-decoder_test.cpp
